Doc Swagger List and Update
