# src/swagger.json
@@ -124,6 +124,94 @@
             "description": "Customer Already Exists"
           }
         }
+      },
+      "get": {
+        "tags": [
+          "Customer"
+        ],
+        "summary": "List customers",
+        "description": "List all customers",
+        "responses": {
+          "200": {
+            "description": "Sucess",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "id": {
+                        "type": "string"      
+                      },
+                      "name": {
+                        "type": "string"
+                      },
+                      "phone": {
+                        "type": "string"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Internal Error"
+          }
+        }
+      }
+    },
+    "/customers/{id}": {
+      "put": {
+        "tags": [
+          "Customer"
+        ],
+        "summary": "Updated customer",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of update",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "style": "simple"
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "name": {
+                    "type": "string"
+                  },
+                  "phone": {
+                    "type": "string"
+                  }
+                }
+              },
+              "example": {
+                "name": "John Doe",
+                "phone": "+5522987654321"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Updated"
+          },
+          "409": {
+            "description": "Customer With This ID Not Found"
+          },
+          "500": {
+            "description": "Internal Error"
+          }
+        }
       }
     }
   }
